Changed implementation of fixed columns: replaced sticky positionning with an actual horizontal scroller

--- a/src/Data.css
+++ b/src/Data.css
@@ -14,11 +14,7 @@ See the License for the specific language governing permissions and
 limitations under the License.
 */
 .rrt-data {
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
+  flex-grow: 1;
   display: flex;
   align-items: stretch;
   justify-items: stretch;
